<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.hemant.realifeearlylearningcenter.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/property_name"
        android:scaleType="centerCrop"
        android:src="@drawable/real_life_assembly" />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/contact_us"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/address"
        style="@style/SubHeaderTextStyle"
        android:drawableStart="@drawable/ic_place_black_24dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/contact"
        style="@style/SubHeaderTextStyle"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:text="@string/contact_number" />

    <TextView
        android:id="@+id/email"
        style="@style/SubHeaderTextStyle"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:text="@string/email" />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/hours_of_operation"
        android:textAllCaps="true" />

    <TextView
        style="@style/SubHeaderTextStyle"
        android:drawableStart="@drawable/ic_insert_invitation_black_24dp"
        android:text="@string/working_days" />

    <TextView
        style="@style/SubHeaderTextStyle"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/ic_access_time_black_24dp"
        android:text="@string/office_hours" />

</LinearLayout>
